# cg_uni_projects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md.backup  clean.sh  main.py
00_lecture/projekt_01/: dots.cpp  main.cpp
01_lecture/: CMakeLists.txt
01_lecture/01_SimpleAnim/: CMakeLists.txt  compile.sh  compileW.sh  run.sh
01_lecture/01_SimpleAnim/src/: CMakeLists.txt  SimpleAnim.cpp  main.cpp
01_lecture/02_SimpleAnimIdle/: CMakeLists.txt  compile.sh
01_lecture/02_SimpleAnimIdle/src/: SimpleAnimIdle.cpp  SimpleVertexShader.vert  SimpleVertexShader.vertexshader  main.cpp
01_lecture/03_geometry_shader/: CMakeLists.txt  compile.sh
01_lecture/03_geometry_shader/src/: GeometryShader.geom  SimpleFragmentShader.frag  SimpleGeometryShader.geometryshader  SimpleVertexShader.vert  SimpleVertexShader.vertexshader  geometry.cpp  util.hpp  util_g.hpp
01_lecture/04_Solar/: CMakeLists.txt  Solar.cpp
01_lecture/04_Solar/src/: SimpleVertexShader.vert  SimpleVertexShader.vertexshader  TessCont.tesc  TessEval.tese
01_lecture/05_torus/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TessEval.tessevalshader  torus.cpp
01_lecture/05_torus/src/: TessCont.tesscontshader  torus.cpp
01_lecture/06_tess/: CMakeLists.txt
01_lecture/06_tess/src/: TessEval.tese  torus.hpp
01_lecture/dots/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  main.cpp  run.sh
01_lecture/geometry_shader/: CMakeLists.txt  SimpleGeometryShader.geom  geometry.cpp  main.cpp  util_g.cpp
01_lecture/geometry_shader/src/: util.cpp
01_lecture/simple_anim/: CMakeLists.txt  main.cpp
01_lecture/simple_anim/src/: main.cpp
01_lecture/simple_anim_idle/: CMakeLists.txt  SimpleVertexShader.vert  main.cpp  main.hpp
01_lecture/solar/: CMakeLists.txt  SimpleFragmentShader.frag  Solar.cpp  main.cpp
01_lecture/solar/src/: SimpleVertexShader.vert
01_lecture/tess/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  main.cpp  torus.cpp
01_lecture/tess/src/: util_t.cpp  util_t.hpp
01_lecture/torus/: CMakeLists.txt  main.cpp  torus.cpp
01_lecture/torus/src/: SimpleVertexShader.vert  TessCont.tesc  torus.cpp
01_lecture/zadatak/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  main.cpp
01_lecture/zadatak/src/: main.cpp
01_lecture/zadatak2/: CMakeLists.txt  main.cpp
01_lecture/zadatak2/src/: SimpleVertexShader.vert
02_lecture/afine_trans_trokuta/: Afine_trans_trokuta.cpp  CMakeLists.txt  SimpleVertexShader.vert  main.cpp
02_lecture/afine_trokut/: Afine_trokut2.cpp  CMakeLists.txt  SimpleVertexShader.vert  main.cpp
02_lecture/dots/: CMakeLists.txt  dots.cpp  main.cpp
02_lecture/slovo_l/: Afine_trokut2.cpp  CMakeLists.txt  SimpleVertexShader.vert  main.cpp
02_lecture/sv/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  SimpleVertexShader_t.vert  TessCont.tesc  TessEval.tese  main.cpp  main.hpp  sv.cpp  util_t.cpp  util_t.hpp
02_lecture/threepoints/: CMakeLists.txt  SimpleVertexShader.vert  main.cpp  threepoints.cpp
03_lecture/cube_zadatak/: CMakeLists.txt  SimpleVertexShader.vert  cube.cpp  main.cpp  main.hpp
03_lecture/dots_vise_tocaka/: CMakeLists.txt  SimpleVertexShader_t.vert  konika.cpp  main.cpp  util_t.cpp
03_lecture/konika_zadatak/: CMakeLists.txt  TessEval.tese  main.cpp  torus.cpp
03_lecture/sah_pers/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleGeometryShader.geom  SimpleVertexShader.vert  main.cpp  sah_pers.cpp  util.cpp  util.hpp
03_lecture/solar/: SimpleVertexShader.vert  cube.cpp  main.cpp
04_lecture/bezier_kruznica/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  main.cpp
04_lecture/konika/: CMakeLists.txt  main.cpp
04_lecture/saver/: CMakeLists.txt  TessCont.tesc  main.cpp
04_lecture/saver_2/: CMakeLists.txt  SimpleVertexShader1.vert  TessEval.tese  main.cpp
06_lecture/boor_cox_rekurzija/: CMakeLists.txt  main.cpp
06_lecture/deRahmChaikin/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  main.cpp
08_lecture/SimpleNurbs/: CMakeLists.txt  FragmentShader.frag  FragmentShader2.frag  FragmentShader3.frag  TessCont1.tesc  VertexShader.vert  main.cpp
08_lecture/solar_ilum/: CMakeLists.txt  FragmentShader.frag  SimpleVertexShader.vert  SimpleVertexShader.vertexshader  Solar_ilum.cpp  main.cpp  util_t.hpp
08_lecture/src/: TessEval.tessevalshader  util_t.cpp
MathLibrary/: AbstractMatrix.cpp  AbstractMatrix.h  IMatrix.h  IVector.h  MathLibrary.cpp  MathLibrary.sln  MathLibrary.vcxproj  MathLibrary.vcxproj.filters  Vector.cpp  Vector.h
MathLibrary/MathLibrary/: AbstractVector.cpp  AbstractVector.h  IMatrix.h  IVector.h  MathLibrary.cpp  MathLibrary.h  MathLibrary.vcxproj  MathLibrary.vcxproj.filters
_scripts/: CMakeLists.txt  clean.sh
auto/: compile.sh
default_shaders/: frag.frag  vert.vert
dots/: CMakeLists.txt
dots/src/: SimpleVertexShader.vertexshader  dots.cpp
math_library/: CMakeLists.txt
math_library/src/: AbstractVector.cpp  AbstractVector.h  Vector.cpp  main.cpp
opengl_libs/: CMakeLists.txt
projects/SimpleNurbs/: CMakeLists.txt  FragmentShader.frag  GeometryShader.geom  GeometryShader2.geom  TessEval1.tese  TessEval2.tese  TessEval3.tese  VertexShader.vert  main.hpp
projects/afine_trans_trokuta/: CMakeLists.txt  main.cpp
projects/bezier_kruznica/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  TessCont.tesc  TessEval.tese  main.cpp
projects/boor_cox_rekurzija/: CMakeLists.txt  main.cpp
projects/cube_zadatak/: CMakeLists.txt  SimpleVertexShader.vert  TessCont.tesc  main.cpp
projects/deRahmChaikin/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  main.cpp
projects/dots/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert
projects/dots2/: CMakeLists.txt  SimpleVertexShader.vert
projects/dots_vise_tocaka/: CMakeLists.txt  main.cpp  (+1 more)
projects/slovo_l/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  main.cpp
util/: util.cpp  util.hpp  util_g.hpp  util_main.cpp  util_main.h
(+46 files in other folders)
