#cmake_minimum_required(VERSION 3.21)
#project(my_solution)
#set(CMAKE_CXX_STANDARD 14)
#MACRO(SUBDIRLIST result curdir)
#    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
#    SET(dirlist "")
#    FOREACH(child ${children})
#        IF(IS_DIRECTORY ${curdir}/${child})
#            LIST(APPEND dirlist ${child})
#        ENDIF()
#    ENDFOREACH()
#    SET(${result} ${dirlist})
#ENDMACRO()
#
#SUBDIRLIST(SUBDIRS ${PROJECT_SOURCE_DIR})
#
#
#FOREACH(subdir ${SUBDIRS})
#    message("Hello")
#    message(${subdir})
#    message(${PROJECT_SOURCE_DIR})
#    IF(NOT ${subdir} MATCHES "build" )
#        add_subdirectory("${PROJECT_SOURCE_DIR}/${subdir}" "${PROJECT_SOURCE_DIR}/build/${subdir}")
#    ENDIF()
#ENDFOREACH()
